@@ -75,7 +75,7 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowCredentials(true); // Allow cookies/credentials
-        configuration.setAllowedOriginPatterns(List.of("http://192.168.110.211:8080")); // Allow all origins
+        configuration.setAllowedOriginPatterns(Arrays.asList("*")); // Allow all origins
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")); // Allow these HTTP methods
         configuration.setAllowedHeaders(Arrays.asList("*")); // Allow all headers
 
@@ -85,4 +85,4 @@ public class SecurityConfig {
     }
 
 }
-//config.setAllowedOriginPatterns(List.of("http://192.168.110.211:8080"));
+// config.setAllowedOriginPatterns(List.of("http://192.168.110.211:8080"));
